# Hardware

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml  rrc_igvc_bot.xml
.devcontainer/: Dockerfile  devcontainer.json
config/: bot_controllers.yaml
docs/: install.md
launch/: bot.launch.py  launch.py
src/Hardware/config/: bot_controllers.yaml
src/include/: bot_system.hpp
